--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,7 +16,23 @@
   }
 }
 
+button,
+input {
+  padding: 0.7em;
+  border-radius: 0.3em;
+  border: 0.01em solid gray;
+}
+a {
+  text-decoration: none;
+  cursor: pointer;
+}
+
 body {
+  min-width: 100vh;
+  min-width: 100dvh;
+
+  min-height: 100vh;
+  min-height: 100dvh;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
